cv03/.metadata/.plugins/org.eclipse.cdt.ui/LED display.build.log
16:33:08 **** Incremental Build of configuration Debug for project LED display ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F030x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:168:13: error: invalid storage class for function 'MX_TIM1_Init'
  168 | static void MX_TIM1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:218:13: error: invalid storage class for function 'MX_USART2_UART_Init'
  218 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:253:13: error: invalid storage class for function 'MX_GPIO_Init'
  253 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:312:1: error: expected declaration or statement at end of input
  312 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:53:13: warning: 'MX_GPIO_Init' used but never defined
   53 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:54:13: warning: 'MX_USART2_UART_Init' used but never defined
   54 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:55:13: warning: 'MX_TIM1_Init' used but never defined
   55 | static void MX_TIM1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:303:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  303 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:253:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  253 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:218:13: warning: 'MX_USART2_UART_Init' defined but not used [-Wunused-function]
  218 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:168:13: warning: 'MX_TIM1_Init' defined but not used [-Wunused-function]
  168 | static void MX_TIM1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:129:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  129 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

16:33:09 Build Failed. 5 errors, 8 warnings. (took 518ms)

